--- a/index.html
+++ b/index.html
@@ -6,10 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Second Web</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique sint dicta tempore consequatur obcaecati,
+        atque molestiae placeat quidem consectetur iure ex fuga beatae aut tenetur a nobis distinctio! Itaque maiores
+        maxime ab repellat neque facere minus ad fugit nisi sed nihil perspiciatis amet, quaerat molestiae eum aliquam.
+        Provident inventore voluptatibus non fugit optio, dolores culpa sunt quidem repellat, asperiores nulla maxime
+        reprehenderit incidunt! Velit blanditiis mollitia repellat? Libero quas rerum tempore, perspiciatis adipisci
+        similique. Doloribus, mollitia eum est in asperiores fugit ab. A culpa possimus quasi, qui odit rerum pariatur,
+        molestias officia quidem asperiores recusandae, corrupti sapiente. Architecto, doloribus officiis.
+    </p>
 </body>
 
 </html>
