--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
     <h1>new change</h2>
         <p>ami kanak</p>
         <h1>new change</h1>
+        <ul>
+            <li>Kanak</li>
+            <li>Karim</li>
+            <li>Rahim</li>
+            <li>Mina</li>
+        </ul>
 </body>
 
 </html>
